--- a/car-price-comparison-portal/package.json
+++ b/car-price-comparison-portal/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@reduxjs/toolkit": "^2.2.5",
+    "antd": "^5.18.0",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
+    "qs": "^6.12.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-photo-view": "^1.2.6",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
