--- a/car-price-comparison-portal/package.json
+++ b/car-price-comparison-portal/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.5",
     "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.18.0",
+    "axios": "^1.7.2",
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "qs": "^6.12.1",
