--- a/car-price-comparison-portal/package.json
+++ b/car-price-comparison-portal/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "amplify-modelgen": "node amplify\\scripts\\amplify-modelgen.js",
-    "amplify-push": "node amplify\\scripts\\amplify-push.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
