--- a/car-price-comparison-portal/package.json
+++ b/car-price-comparison-portal/package.json
@@ -16,7 +16,7 @@
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "lodash": "^4.17.21",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
